# inorixpy

./: README.md  pyproject.toml
.github/workflows/: build.yml
inorixpy/: print.py  time.py
tests/: test_inorixpy.py  test_time.py
