[tool.poetry]
name = "inorixpy"
version = "0.1.0"
description = "Library for Python"
authors = ["Shunta Komatsu <shuntak217@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.46.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.1"
isort = "^4.3.21"
mypy = "^0.770"
pytest = "^5.4.2"
pytest-freezegun = "^0.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
